# intro-qt

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
